--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -25,21 +25,41 @@
     </h4>
   </div>
 
-  <%= form_with model: @comment, local: true do |form|%>
-    <%= form.hidden_field :post_id, value: @post.id %>
+  <div class="shadow-sm m-3 p-3 bg-light rounded">
+    <%= form_with model: @comment, local: true do |form|%>
+      <%= form.hidden_field :post_id, value: @post.id %>
 
-  <div class="form-group">
-    <%= form.label :author %>
-    <%= form.text_field :author, class: 'form-control' %>
+    <div class="form-group">
+      <%= form.label :author %>
+      <%= form.text_field :author, class: 'form-control' %>
+    </div>
+
+    <div class="form-group">
+      <%= form.label :body %>
+      <%= form.text_area :body, class: 'form-control mb-2', rows: 2 %>
+    </div>
+
+      <%= form.submit 'Enviar', class: "btn btn-primary mb-2", data: { disable_with: 'Enviando...' } %>
+    <% end %>
   </div>
+  <%= @comments.each do |comment| %>
+    <div class="shadow-sm m-3 p-3 bg-light rounded">
+      <div class="row">
+        <div class="col">
+          <%= comment.author %> 
+        </div>
 
-  <div class="form-group">
-    <%= form.label :body %>
-    <%= form.text_area :body, class: 'form-control mb-2', rows: 2 %>
-  </div>
+        <div class="col text-right">
+          <em data-bs-toggle="tooltip" data-bs-placement="top" 
+            title="<%= l comment.created_at, format: :long %>">
+            <%= time_ago_in_words comment.created_at %> atrás
+          </em>
+        </div>
 
- 
-    <%= form.submit 'Enviar', class: "btn btn-primary mb-2", data: { disable_with: 'Enviando...' } %>
+      </div>
+        <hr>
+      <%= sanitize(comment.body.gsub("\n", "<br>")).html_safe %>
+    </div> 
   <% end %>
 </div>
 
